add start of renderer

--- a/src/rendering/CMakeLists.txt
+++ b/src/rendering/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_library(rendering shaders.cpp)
+add_library(rendering shaderutils.cpp renderer.cpp vertexbuffer.cpp indexbuffer.cpp)
+
+find_package(GLEW REQUIRED)
+target_link_libraries(rendering GLEW::GLEW)
+
+find_package(glfw3 REQUIRED)
+target_link_libraries(rendering glfw3)
