--- a/laika3d/CMakeLists.txt
+++ b/laika3d/CMakeLists.txt
@@ -4,6 +4,5 @@ find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(glm REQUIRED)
-find_package(PNG REQUIRED)
 
-target_link_libraries(laika3d GLEW::GLEW OpenGL::GL glfw glm PNG::PNG)
+target_link_libraries(laika3d GLEW::GLEW OpenGL::GL glfw glm)
