add catch for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(laika3d)
 add_subdirectory(demo)
 
 add_subdirectory(laika3d)
-target_link_directories(laika3d_demo PRIVATE laika3d)
 
 target_link_libraries(laika3d_demo laika3d)
+
+add_subdirectory(test)
